crates/ty_python_semantic/resources/mdtest/snapshots/return_type.md_-_Function_return_type_-_Diagnostics_for_`emp…_(f44e56404a51ca26).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: return_type.md - Function return type - Diagnostics for `empty-body` on non-protocol subclasses of protocol classes
mdtest path: crates/ty_python_semantic/resources/mdtest/function/return_type.md
---

# Python source files

## mdtest_snippet.py

```
1 | from typing_extensions import Protocol
2 | 
3 | class Abstract(Protocol):
4 |     def method(self) -> str: ...
5 | 
6 | class Concrete(Abstract):
7 |     def method(self) -> str: ...  # error: [empty-body]
```

# Diagnostics

```
error[empty-body]: Function always implicitly returns `None`, which is not assignable to return type `str`
 --> src/mdtest_snippet.py:7:25
  |
6 | class Concrete(Abstract):
7 |     def method(self) -> str: ...  # error: [empty-body]
  |                         ^^^
  |
info: Consider changing the return annotation to `-> None` or adding a `return` statement
info: Functions with empty bodies and non-`None` return types are only permitted:
info:  - in stub files
info:  - in `if TYPE_CHECKING` blocks
info:  - as methods on protocol classes
info:  - or as `@abstractmethod`-decorated methods on abstract classes
info: Class `Concrete` has `typing.Protocol` in its MRO, but it is not a protocol class
info: Only classes that directly inherit from `typing.Protocol` or `typing_extensions.Protocol` are considered protocol classes
 --> src/mdtest_snippet.py:6:7
  |
4 |     def method(self) -> str: ...
5 |
6 | class Concrete(Abstract):
  |       ^^^^^^^^^^^^^^^^^^ `Protocol` not present in `Concrete`'s immediate bases
7 |     def method(self) -> str: ...  # error: [empty-body]
  |
info: See https://typing.python.org/en/latest/spec/protocol.html#
info: rule `empty-body` is enabled by default

```
